syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "BillingAccountOpsProto";

package facade;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "routines.proto";
import "facade_common.proto";


import "ents/accounting_payment.proto";
import "extra/accounting_payment.proto";

service BillingAccountOperations {
  rpc CreateBillingAccount(CreateBillingAccountParams) returns (domain.BillingAccountFlatData) {}
  rpc UpdateBillingAccount(UpdateBillingAccountParams) returns (domain.BillingAccountFlatData) {}
  rpc GetBillingAccount(BundleGetRequest) returns (domain.BillingAccountFlatData) {}

  
  rpc AddBillingAccountRole(AddBillingAccountRoleParams) returns (routines.Response) {}
  rpc UpdateBillingAccountRole(UpdateBillingAccountRoleParams) returns (routines.Response) {}
  rpc RemoveBillingAccountRole(RemoveBillingAccountRoleParams) returns (routines.Response) {}
  
  rpc AddBillingAccountTerm(AddBillingAccountTermParams) returns (routines.Response) {}
  rpc UpdateBillingAccountTerm(UpdateBillingAccountTermParams) returns (routines.Response) {}
  rpc RemoveBillingAccountTerm(RemoveBillingAccountTermParams) returns (routines.Response) {}
  

  // -- relations: one --

  // -- extensions --
  

    // -- query --
  rpc QueryAll(BundleHandle) returns (domain.BillingAccountList) {}
  rpc QueryIds(BundleHandle) returns (routines.Strings) {}
  rpc QueryList(BundleQueryMap) returns (domain.BillingAccountList) {}
  rpc QueryOne(BundleQueryMap) returns (domain.BillingAccountFlatData) {}
  rpc Select(BundleHandle) returns (domain.BillingAccountList) {}

  rpc ListBillingAccounts(BundleListRequest) returns (domain.BillingAccountList) {}
  rpc LoadBillingAccounts(BundleIdsRequest) returns (domain.BillingAccountList) {}
  rpc StreamBillingAccounts(BundleListRequest) returns (stream domain.BillingAccountList) {}
  rpc RemoveBillingAccount(BundleDeleteRequest) returns (routines.Response) {}
}


// Mutations for main entity

message CreateBillingAccountParams{
  BundleHandle handle = 1;
  domain.BillingAccountFlatData billingAccount = 2;
  string comment = 3;
}

message UpdateBillingAccountParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.BillingAccountFlatData billingAccount = 3;
  string comment = 4;
}


// Mutations for BillingAccountRole

message AddBillingAccountRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.BillingAccountRoleData data = 3;
  string comment = 4;
}

message UpdateBillingAccountRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.BillingAccountRoleData data = 3;
  string comment = 4;
}

message RemoveBillingAccountRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for BillingAccountTerm

message AddBillingAccountTermParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.BillingAccountTermData data = 3;
  string comment = 4;
}

message UpdateBillingAccountTermParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.BillingAccountTermData data = 3;
  string comment = 4;
}

message RemoveBillingAccountTermParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

